- added a quick usage gif, to be used in README and as a twitter card image - added twitter card tags - better credits in the sidebar - chart: increased the <h1> size a bit - sidebar: reduced the vertical padding on `.row`s to save room (helps avoiding the scrollbar)

--- a/src/viz/style/chart.less
+++ b/src/viz/style/chart.less
@@ -1,6 +1,8 @@
 @import "_vars";
 @import "_mixins";
 
+@chartH1FontSize: 1.5em;
+
 #chart {
     flex: 1 1 0;
 
@@ -8,8 +10,9 @@
     flex-direction: column;
 
     h1 {
-        flex: 0 0 1.2em;
+        flex: 0 0 @chartH1FontSize;
         padding: 0.6em 0.8em 1em;
+        font-size: @chartH1FontSize;
     }
 
     svg {
