--- a/src/viz/style/sidebar.less
+++ b/src/viz/style/sidebar.less
@@ -38,7 +38,7 @@
         .row {
             display: flex;
             align-items: center;
-            padding-top: 1em;
+            padding-top: 0.75em;
 
             &.keyvalue {
                 p.key {
